<!--suppress DeprecatedClassUsageInspection -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:iconSpaceReserved="false"
        android:title="@string/videoenhancement_header">
        <SwitchPreference
            android:defaultValue="true"
            android:iconSpaceReserved="false"
            android:key="setIsEffectWhiteList"
            android:title="@string/setIsEffectWhiteList" />
        <SwitchPreference
            android:defaultValue="false"
            android:iconSpaceReserved="false"
            android:key="setIsDemoWhiteList"
            android:title="@string/setIsDemoWhiteList" />
    </PreferenceCategory>
    <PreferenceCategory
        android:iconSpaceReserved="false"
        android:title="@string/hdr_header">
        <SwitchPreference
            android:defaultValue="true"
            android:iconSpaceReserved="false"
            android:key="boostDisplay"
            android:title="@string/boostDisplay" />
        <SwitchPreference
            android:defaultValue="false"
            android:iconSpaceReserved="false"
            android:key="enableCABC"
            android:title="@string/enableCABC" />
    </PreferenceCategory>
    <PreferenceCategory
        android:iconSpaceReserved="false"
        android:title="@string/msic_header">
        <SwitchPreference
            android:defaultValue="false"
            android:iconSpaceReserved="false"
            android:key="instantmode"
            android:summaryOff="@string/instantmode_summary_off"
            android:summaryOn="@string/instantmode_summary_on"
            android:title="@string/instantmode" />
        <SwitchPreference
            android:defaultValue="false"
            android:iconSpaceReserved="false"
            android:key="hijacklog"
            android:summary="@string/hijacklog_summary"
            android:title="@string/hijacklog" />
    </PreferenceCategory>
</PreferenceScreen>